--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "styled-components": "^4.1.1",
     "superagent": "^3.8.3"
   },
   "scripts": {
